--- a/style.css
+++ b/style.css
@@ -9,8 +9,6 @@ header{
 
 .main-menu{
     background: #f5f5f5;
-    position: fixed;
-    z-index: 10;
     width: 100%;
     flex-wrap: wrap;
 }
@@ -275,6 +273,14 @@ footer{
     .footer-image{
         padding-top: 60px;
         padding-left: 0px;
+    }
+
+    .main-menu{
+        background: #f5f5f5;
+        position: fixed;
+        z-index: 10;
+        width: 100%;
+        flex-wrap: wrap;
     }
     
 }
