--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ header{
 }
 
 .radius{
-    margin-left: 50px;
+    margin-left: 80px;
     border-radius: 25%;
 }
 
@@ -61,8 +61,8 @@ header{
 
 .main-quienes{
     color: #f5f5f5;
-    padding-top: 290px;
-    padding-left: 150px;
+    padding-top: 70px;
+    padding-left: 30px;
 }
 
 .title-quienes{
@@ -118,7 +118,8 @@ header{
 }
 
 .container-grid{
-    padding: 150px 100px;
+    flex-wrap: wrap;
+    padding: 30px;
     display: flex;
     justify-content: space-between;
 }
@@ -140,8 +141,7 @@ header{
 .main-servicios a{
     text-align:center ;
     font-size: 20px;
-    float: left;
-    max-width: 250px;
+    max-width: 220px;
     padding: 20px;
 }
 
@@ -237,6 +237,7 @@ footer{
 }
 
 @media screen and (min-width: 600px) {
+
     .menu {
         display: flex;
         justify-content: space-between;
@@ -256,6 +257,19 @@ footer{
         padding-top: 0;
         min-height: 750px;
     }
+
+    .main-quienes{
+        color: #f5f5f5;
+        padding-top: 290px;
+        padding-left: 150px;
+    }
+
+    .container-grid{
+        padding: 150px 100px;
+        display: flex;
+        justify-content: space-between;
+    }
+    
 
     .column3 .row2{
         margin-top: 25px;
@@ -283,4 +297,42 @@ footer{
         flex-wrap: wrap;
     }
     
+}
+
+@media screen and (max-width: 768px) {
+    .container-grid{
+        padding: 150px;
+        display: flex;
+        justify-content: space-between;
+    }
+}
+
+@media screen and (min-width: 425px) {
+    .radius{
+        margin-left: 0px;
+        border-radius: 25%;
+    }
+
+    .container-grid{
+        padding: 70px;
+        display: flex;
+        justify-content: space-between;
+    }
+}
+
+@media screen and (max-width: 375px) {
+
+    .container-grid{
+        padding: 50px;
+        display: flex;
+        justify-content: space-between;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .container-grid{
+        padding: 10px;
+        display: flex;
+        justify-content: space-between;
+    }
 }
