--- a/experiencia.css
+++ b/experiencia.css
@@ -1,4 +1,5 @@
 *{
+    flex-wrap: wrap;
     margin: 0;
     padding: 0;
 }
@@ -47,27 +48,40 @@ header{
     border-top: 3px solid #305fa7 ;
 }
 
+#menu{
+    display:none;
+}
+
+.label1{
+    display: none;
+}
+
 .titulo{
+    margin: 0 auto ;
     padding: 100px;
     background: #E2E2E2;
 }
 
 .titulo h1{
+    margin: 0 auto ;
     color: #323E48;
     font-size: 40px;
 }
 
 .info{
-    display: flex;
+    margin: 0 auto ;
 }
 
-.info img{   
+.imagen{
+    float: left;
+    margin: 0 auto ;
     border-radius: 10px;
     margin: 100px 50px 100px 100px;
     width: 500px;
 }
 
 .info-2 {
+    margin-top: 95px;
     padding: 20px;
 }
 
@@ -255,6 +269,70 @@ footer{
 }
 
 @media screen and (max-width: 768px) {
+
+    .imagen{
+        float: left;
+        margin: 0 auto ;
+        border-radius: 10px;
+        margin: 100px 50px 100px 55px;
+        width: 210px;
+    }
+
+    .info-2 p{
+        text-align: justify ;
+    }
+
+    ul{
+        display: none;
+      }
+      
+      #menu:checked  ~ ul{
+        display:block;
+      }
+      
+      #menu {
+        display: none;
+      }
+      
+      .label1 {
+        float: right;
+        margin: 30px 50px 0px 2px;
+        box-sizing: border-box;
+        display: inline-block;
+        border: 1px solid black;
+        border-radius: 5px;
+        width: 30px;
+        height: 30px;
+        line-height: 30px;
+        font-weight: bold;
+        text-align: center;
+        user-select: none;
+      }
+    
+      .label1:hover{
+        background: grey;
+      }
+    
+      ul{
+        margin-top:0;
+        padding: 0;
+        width: 200px;
+      
+      }
+    
+      li {
+        display: block;
+        background: lightgrey;
+        margin: 0;
+        padding: 10px;
+        list-style: none;
+        border-bottom: 1px solid grey;
+      }
+    
+      li:hover {
+        filter: brightness(110%);
+      }
+    
 
     .main-parrafo2{
         color: #f5f5f5;
