--- a/imagenes/29DeAbril_files/experiencia.css
+++ b/imagenes/29DeAbril_files/experiencia.css
@@ -1,7 +1,9 @@
 *{
-    margin: 0;
     flex-wrap: wrap;
+    margin: 0;
+    padding: 0;
 }
+
 
 body {
     font-family: 'Roboto', sans-serif;
@@ -54,79 +56,44 @@ header{
     display: none;
 }
 
-.separacion{
-    padding:50px;
-}
-
-.servicios-h1{
-    font-size: 20px;
+.titulo{
+    margin: 0 auto ;
     padding: 100px;
     background: #E2E2E2;
-    color: #323E48;
-    margin-bottom: 60px;
 }
 
-
-#servicios{
-    padding: 50px;
-    margin: 0 auto;
-    position: relative;
-    display: flex;
-}
-
-
-.main-servicios{
-    position: relative;
-    margin: 0 auto;
-    padding: 20px;
-    display: flex;
-    flex-direction: row;
-    background: #e6eeff;
-    border: 3px solid rgb(214, 214, 214);
-    border-radius: 20px;
-}
-
-.image-servicios img{
-    width: 250px;
-    border-radius: 20px;
-}
-
-.main-servicios a{
-    text-align:center ;
-    font-size: 20px;
-    max-width: 220px;
-    padding: 20px;
-}
-
-span{
-    color: cornflowerblue;
-}
-
-
-.separacion ul{
+.titulo h1{
     margin: 0 auto ;
-    list-style: circle;
+    color: #323E48;
+    font-size: 40px;
+}
+
+.info{
+    margin: 0 auto ;
+}
+
+.info img{   
+    margin: 0 auto ;
+    border-radius: 10px;
+    margin: 100px 50px 100px 100px;
     width: 500px;
 }
-.separacion li{
-    padding: 5px;
+
+.info-2 {
+    margin-top: 95px;
+    padding: 20px;
 }
 
-.separacion{
-    margin: 0 auto ;
-    display: flex;
-}
-
-#titulo{
-    color: cornflowerblue;
-    font-size: 35px;
-    text-align: center;
+.info-2 p{
+    font-weight: 300;
+    margin-top: 120px;
+    padding-bottom: 0px;
 }
 
 
 footer{
-    padding-top: 50px;
     padding-bottom: 50px;
+    padding-top: 50px;
     display: flex;
     width: 100%;
     background: #25272e;
@@ -231,8 +198,47 @@ footer{
     }
 
     .hero-image {
+        position: relative;
         padding-top: 0;
         min-height: 750px;
+}
+
+    .main-quienes{
+        position: relative;
+        max-width: 960px;
+        height: 100px;
+        font-size: 15px;
+        margin: 0 auto;
+        color: #f5f5f5;
+    }
+
+    .title-quienes{
+        font-size: 22px;
+        max-width: 565px;
+        background: #305fa7;
+        padding: 15px;
+        border-radius: 3px 40px 3px;
+        color: rgb(27, 41, 66);
+    }
+
+    .parrafo{
+        float: left;
+        text-align: justify;
+        font-size: 20px;
+        color: whitesmoke;
+        max-width: 350px;
+        border-radius: 20px ;
+    }
+
+    .parrafo p{
+        border:3px solid slategray;
+        border-radius: 20px;
+    }
+
+    .container-grid{
+        padding: 150px 100px;
+        display: flex;
+        justify-content: space-between;
     }
     
 
@@ -262,28 +268,6 @@ footer{
 }
 
 @media screen and (max-width: 768px) {
-    
-    .separacion ul{
-    margin: 0 auto ;
-    list-style: circle;
-        width: 500px;
-    }
-    
-    .separacion li{
-        padding: 5px;
-    }
-
-    .separacion{
-        margin: 0 auto ;
-        display: flex;
-    }
-
-    #titulo{
-        color: cornflowerblue;
-        font-size: 35px;
-        text-align: center;
-    }
-
     ul{
         display: none;
       }
@@ -334,6 +318,7 @@ footer{
       li:hover {
         filter: brightness(110%);
       }
+    
 
     .main-parrafo2{
         color: #f5f5f5;
@@ -342,7 +327,7 @@ footer{
         padding-right: 0px;
     }
 
-    #servicios{
+    .container-grid{
         padding: 150px;
         display: flex;
         justify-content: space-between;
@@ -384,7 +369,7 @@ footer{
         align-items: center;
     }
 
-    #servicios{
+    .container-grid{
         padding: 70px;
         display: flex;
         justify-content: space-between;
@@ -421,7 +406,7 @@ footer{
     }
 
 
-    #servicios{
+    .container-grid{
         padding: 50px;
         display: flex;
         justify-content: space-between;
@@ -457,7 +442,7 @@ footer{
         align-items: center;
     }
 
-    #servicios{
+    .container-grid{
         padding: 10px;
         display: flex;
         justify-content: space-between;
