--- a/quienes-somos.css
+++ b/quienes-somos.css
@@ -1,4 +1,5 @@
 *{
+    flex-wrap: wrap;
     margin: 0;
     padding: 0;
 }
@@ -26,6 +27,14 @@ header{
 
 .radius{
     border-radius: 25%;
+}
+
+.label1{
+    display :none;
+}
+
+#menu{
+    display:none;
 }
 
 .menu-link{
@@ -59,7 +68,6 @@ header{
 
 .img-info{
     display: flex;
-
 }
 
 .info{
@@ -68,8 +76,10 @@ header{
 
 .info p{
     font-weight: 300;
-    margin-top: 120px;
+    margin-top: 170px;
     padding-bottom: 0px;
+    text-align: justify;
+    max-width: 400px;
 }
 
 
@@ -257,6 +267,69 @@ footer{
 }
 
 @media screen and (max-width: 768px) {
+
+    .info p{
+        margin-top: 0;
+    }
+
+    .img-info img{
+            float: left;
+            margin: 0 auto ;
+            border-radius: 10px;
+            margin: 100px 50px 100px 55px;
+            width: 210px;
+        }
+        
+    ul{
+        display: none;
+      }
+      
+      #menu:checked  ~ ul{
+        display:block;
+      }
+      
+      #menu {
+        display: none;
+      }
+      
+      .label1 {
+        float: right;
+        margin: 30px 50px 0px 2px;
+        box-sizing: border-box;
+        display: inline-block;
+        border: 1px solid black;
+        border-radius: 5px;
+        width: 30px;
+        height: 30px;
+        line-height: 30px;
+        font-weight: bold;
+        text-align: center;
+        user-select: none;
+      }
+    
+      .label1:hover{
+        background: grey;
+      }
+    
+      ul{
+        margin-top:0;
+        padding: 0;
+        width: 200px;
+      
+      }
+    
+      li {
+        display: block;
+        background: lightgrey;
+        margin: 0;
+        padding: 10px;
+        list-style: none;
+        border-bottom: 1px solid grey;
+      }
+    
+      li:hover {
+        filter: brightness(110%);
+      }
 
     .main-parrafo2{
         color: #f5f5f5;
