--- a/style.css
+++ b/style.css
@@ -17,6 +17,14 @@ header{
     padding-top: 15px;
 }
 
+.label1{
+    display: none;
+}
+
+#menu{
+    display: none;
+}
+
 .menu img{
     width: 150px;
     margin-left: 60px;
@@ -211,6 +219,9 @@ footer{
     height: 150px;
 }
 
+@media screen and (min-width: 768px) {
+}
+
 @media screen and (min-width: 600px) {
 
     .menu-link{
@@ -272,6 +283,63 @@ footer{
 }
 
 @media screen and (max-width: 768px) {
+    ul{
+        display: none;
+      }
+      
+      #menu:checked  ~ ul{
+        display:block;
+      }
+      
+      #menu {
+        display: none;
+      }
+      
+      .label1 {
+        float: right;
+        margin: 30px 50px 0px 2px;
+        box-sizing: border-box;
+        display: inline-block;
+        border: 1px solid black;
+        border-radius: 5px;
+        width: 30px;
+        height: 30px;
+        line-height: 30px;
+        font-weight: bold;
+        text-align: center;
+        user-select: none;
+      }
+    
+      .label1:hover{
+        background: grey;
+      }
+    
+      ul{
+        margin-top:0;
+        padding: 0;
+        width: 200px;
+      
+      }
+    
+      li {
+        display: block;
+        background: lightgrey;
+        margin: 0;
+        padding: 10px;
+        list-style: none;
+        border-bottom: 1px solid grey;
+      }
+    
+      li:hover {
+        filter: brightness(110%);
+      }
+    
+      .titulo h1{
+          color: #25272e;
+      }
+      .titulo p{
+        color: #25272e;
+      }
 
     .main-parrafo2{
         color: #f5f5f5;
@@ -400,10 +468,4 @@ footer{
         display: flex;
         justify-content: space-between;
     }
-}
-
-
-/* Page Servicios */
-#servicios {
-    display: flex;
 }
