Añado la flota disponible.

--- a/servicios.css
+++ b/servicios.css
@@ -347,6 +347,10 @@ footer{
         display: flex;
         justify-content: space-between;
     }
+
+    .column1 p{
+        padding: 15px;
+    }
 }
 
 @media screen and (max-width: 425px) {
