--- a/experiencia.css
+++ b/experiencia.css
@@ -346,6 +346,10 @@ footer{
         display: flex;
         justify-content: space-between;
     }
+
+    .column1 p{
+        padding: 15px;
+    }
 }
 
 @media screen and (max-width: 425px) {
