--- a/quienes-somos.css
+++ b/quienes-somos.css
@@ -343,6 +343,10 @@ footer{
         display: flex;
         justify-content: space-between;
     }
+
+    .column1 p{
+        padding: 15px;
+    }
 }
 
 @media screen and (max-width: 425px) {
