--- a/quienes-somos.css
+++ b/quienes-somos.css
@@ -272,12 +272,14 @@ footer{
         margin-top: 0;
     }
 
+    .img-info{
+        display: flex;
+    }
+
     .img-info img{
-            float: left;
-            margin: 0 auto ;
-            border-radius: 10px;
-            margin: 100px 50px 100px 55px;
-            width: 210px;
+        border-radius: 10px;
+        margin: 50px auto;
+        width: 250px;
         }
         
     ul{
